# TinyRenderer

./: .gitignore  Cargo.toml  README.md  build.rs  example_pcf.shader  render_doc_settings.cap
assets/cube/: asset.json  asset3.json
assets/defaults/: irradiance_map.data
assets/levels/: first.level
assets/models/cube/: asset.json
assets/textures/defaults/: irradiance_map.data
crates/imgui_wgpu/: Cargo.toml
crates/imgui_winit_support/: cargo.toml
crates/imgui_winit_support/src/: lib.rs
crates/math_helpers/: Cargo.toml
crates/math_helpers/src/: degrees.rs  lib.rs  line.rs
crates/serde_serializable/: Cargo.toml
crates/serde_serializable/src/: lib.rs
crates/serde_serializable_derive/: Cargo.toml
crates/serde_serializable_derive/src/: lib.rs
crates/shader_processor/: cargo.toml
crates/shader_processor/src/: lib.rs
crates/test_crate/: Cargo.toml  example.rs
crates/test_crate/src/: main.rs
crates/ui_item/: Cargo.toml
crates/ui_item/src/: lib.rs  type_display.rs  type_setting.rs  types.rs
crates/ui_item_derive/: Cargo.toml
crates/ui_item_derive/src/: lib.rs  set_from_ui_derive.rs  ui_display_derive.rs
levels/: test.lvl  test_backup.lvl
src/: actions.rs  app.rs  basic_renderable.rs  bind_group_layout_descriptors.rs  buffer.rs  buffer_capture.rs  buffer_content.rs  buffer_reader.rs  camera.rs  camera_controller.rs  color.rs  components.rs  cubemap_helpers.rs  custom_event.rs  diffuse_irradiance_renderer.rs  drawable.rs  equirec_to_cubemap_renderer.rs  equirectangular_to_cubemap_renderer.rs  events.rs  file_loader.rs  forward_pass.rs  forward_renderer.rs  frame_timer.rs  gbuffer.rs  gbuffer_geometry_renderer.rs  gizmo.rs  gizmo_handler.rs  global_params.rs  gpu_buffer.rs  gui.rs  gui_helpers.rs  gui_settable_value.rs  imgui.rs  input_actions.rs  instance.rs  light_controller.rs  light_render_data.rs  light_rendering_gpu_data.rs  lights.rs  main.rs  (+29 more)
src/math/: matrix.rs  mod.rs
src/pipelines/: diffuse_irradiance_baker_rp.rs  equirectangular_to_cubemap_rp.rs  forward_rp.rs  gbuffer_geometry_rp.rs  main_rp.rs  mod.rs  object_picker_rp.rs  post_process_rp.rs  render_pipeline_base.rs  shader_bindings.rs  shader_compilation_result.rs  shader_compiler.rs  shadow_rp.rs  simple_compute_pipeline.rs  skybox_pipeline.rs  skybox_rp.rs
src/shaders/: diffuse_irradiance_bake.wgsl  equirectangular_to_cubemap.wgsl  fill_gbuffer.wgsl  forward.wgsl  forward_pass_with_color.wgsl  gbuffer_geometry.wgsl  gbuffer_geometry_flat_parameter.wgsl  gbuffer_pass.wgsl  geometry_pass.wgsl  light.wgsl  main.wgsl  mipmap_generator.wgsl  pick.wgsl  post_process.wgsl  screen_space_reflection.wgsl  shader.wgsl  shadow.wgsl  shadow_bake_vert.wgsl  skybox.wgsl  tone_mapping.wgsl
