[package]
name = "rendering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29"
log = "0.4"
async-std = "1.12"
anyhow = "1.0"
glam = "0.25"
futures-intrusive = "0.5"
png = "0.17"
simple_logger = "4.3.3"
crossbeam-channel = "0.5"
rayon = "1.8"
half = "2.4"
bytemuck = { version = "1.14", features = [ "derive" ] }

wgpu = "0.19"
radiant = "0.3"
egui = "0.26"
egui-wgpu = { version = "0.26.0",features = ["winit"] }
egui-winit = "0.26.0"

shader_processor = { path = "crates/shader_processor" }

tobj = { version = "4.0", features = ["async"]}
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
