[package]
name = "rendering"
version = "0.1.0"
edition = "2021"
[workspace]
members = ["crates/ui_item", "crates/test_crate", "crates/ui_item_derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.30.5"
log = "0.4"
async-std = "1.12"
anyhow = "1.0"
glam = { version = "0.29", features = ["serde"] }
futures-intrusive = "0.5"
png = "0.17"
simple_logger = "5.0.0"
# simple_logger uses time, we don't, but a certain version is
# needed for it to compile with latest rust, thus we specify that version
time = "0.3.36"
crossbeam-channel = "0.5"
rayon = "1.8"
half = "2.4"
bytemuck = { version = "1.14", features = ["derive"] }
profiling = "1.0.16"

wgpu = { version = "23.0", features = ["serde"] }
radiant = "0.3"
egui = "0.30"
egui-wgpu = { version = "0.30", features = ["winit"] }
egui-winit = "0.30"

shader_processor = { path = "crates/shader_processor" }
ui_item = { path = "crates/ui_item" }
ui_item_derive = { path = "crates/ui_item_derive" }

tobj = { version = "4.0", features = ["async"] }
gltf = { version = "1.4" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
